Fix screen cut off issues by setting html and body height
to 100%

--- a/src/CSS/general-style.css
+++ b/src/CSS/general-style.css
@@ -2,11 +2,16 @@
   font-family: "Poppins", sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 .root {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   background-color: #ece6e6;
 }
 
@@ -62,6 +67,7 @@
 .location-info {
   display: flex;
   flex-direction: column;
+  text-align: center;
   gap: 0.5rem;
   font-size: 1.5rem;
   justify-self: start;
@@ -100,7 +106,7 @@
 .main-info {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .weather-condition-icon {
@@ -139,10 +145,11 @@
 
 /* Future forcast styles */
 .future-forecast-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
   align-items: center;
+  gap: 1rem;
 }
 
 .future-forecast-item {
@@ -154,13 +161,14 @@
   background-color: #ece6e6;
   padding: 0.8rem 1.7rem;
   border-radius: 0.5rem;
+  width: fit-content;
 }
 
 @media only screen and (max-width: 500px) {
   .all-info-container {
     width: 100%;
+    height: 100%;
   }
-
 
   .location-date-time-info {
     grid-template-columns: 1fr;
@@ -186,6 +194,11 @@
 
   .future-forecast-container {
     justify-content: center;
+  }
+
+  .weather-info {
+    align-self: start;
+    gap: 2rem;
   }
 }
 
